# nx2elf

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile-lib-x32  Makefile-lib-x64  Makefile-x32  README.md  elf-nsf.h  elf.h  elf_eh.cpp  elf_eh.h  lz4.h  nso2elf.cpp  nx2elf.cpp  nx2elf.sln  nx2elf.vcxproj  nx2elf.vcxproj.filters  types.h
.github/workflows/: build.yml  cd.yml
